data/all_generated_tests/raw_wast_tests/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_875.wast
;; 6. **Test Description:**    - Formulate a continuous loop in module A, interspersed with `nop` instructions and a counter update. Export this loop function. Module B calls this function and ensures the loop terminates based on the correct counter value.    - **Constraint Checked:** Verifies `nop` does not prevent proper loop execution and termination.    - **Relation to Issue:** Checks infinite loop prevention and correct execution in cross-module scenarios.

 ;; (module
  (func $loop (param $count i32) (result i32)
    (loop $loop
      local.get $count
      i32.const 1
      i32.sub
      local.tee $count
      i32.const 0
      i32.gt_s
      if
        nop
        br $loop
      end
    )
    local.get $count
  )
  (export "loop" (func $loop))
)

(module
  (import "mod" "loop" (func $loop (param i32) (result i32)))
  (func (export "test")
    i32.const 10
    call $loop
    drop
  )
)

(register "mod")
(assert_invalid
  (module (import "mod" "loop" (func $loop (param i32) (result f64))))
  "type mismatch"
)